// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Ingredients with ingredients correctly 1`] = `
<div>
  <styled.label>
    Ingredients *
  </styled.label>
  <Ingredient
    error={false}
    i={0}
    key="0"
  >
    <Input
      onChange={[Function]}
      placeholder="name"
      value="eggs"
    />
    <Input
      onChange={[Function]}
      placeholder="quantity"
      value="2-4"
    />
    <DeleteIngredient
      onClick={[Function]}
    >
      ×
    </DeleteIngredient>
  </Ingredient>
  <Ingredient
    error={false}
    i={1}
    key="1"
  >
    <Input
      onChange={[Function]}
      placeholder="name"
      value="butter"
    />
    <Input
      onChange={[Function]}
      placeholder="quantity"
    />
    <DeleteIngredient
      onClick={[Function]}
    >
      ×
    </DeleteIngredient>
  </Ingredient>
  <Ingredient
    error={false}
    i={2}
    key="2"
  >
    <Input
      onChange={[Function]}
      placeholder="name"
      value="salt"
    />
    <Input
      onChange={[Function]}
      placeholder="quantity"
    />
    <DeleteIngredient
      onClick={[Function]}
    >
      ×
    </DeleteIngredient>
  </Ingredient>
  <Ingredient
    error={false}
    i={3}
    key="3"
  >
    <Input
      onChange={[Function]}
      placeholder="name"
      value="pepper"
    />
    <Input
      onChange={[Function]}
      placeholder="quantity"
    />
    <DeleteIngredient
      onClick={[Function]}
    >
      ×
    </DeleteIngredient>
  </Ingredient>
  <AddIngredient
    onClick={[Function]}
  >
    Add new ingredient
  </AddIngredient>
</div>
`;

exports[`should render Ingredients with no ingredients correctly 1`] = `
<div>
  <styled.label>
    Ingredients *
  </styled.label>
  <Ingredient
    error={false}
    i={0}
    key="0"
  >
    <Input
      onChange={[Function]}
      placeholder="name"
      value=""
    />
    <Input
      onChange={[Function]}
      placeholder="quantity"
      value=""
    />
    <DeleteIngredient
      onClick={[Function]}
    >
      ×
    </DeleteIngredient>
  </Ingredient>
  <Ingredient
    error={false}
    i={1}
    key="1"
  >
    <Input
      onChange={[Function]}
      placeholder="name"
      value=""
    />
    <Input
      onChange={[Function]}
      placeholder="quantity"
      value=""
    />
    <DeleteIngredient
      onClick={[Function]}
    >
      ×
    </DeleteIngredient>
  </Ingredient>
  <Ingredient
    error={false}
    i={2}
    key="2"
  >
    <Input
      onChange={[Function]}
      placeholder="name"
      value=""
    />
    <Input
      onChange={[Function]}
      placeholder="quantity"
      value=""
    />
    <DeleteIngredient
      onClick={[Function]}
    >
      ×
    </DeleteIngredient>
  </Ingredient>
  <AddIngredient
    onClick={[Function]}
  >
    Add new ingredient
  </AddIngredient>
</div>
`;
